Resolve "ci for eulixplatform-registry-service"

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -126,27 +126,28 @@
         <p>If not already done, run the application in <em>dev mode</em> using: <code>./mvnw compile quarkus:dev</code>.
         </p>
         <ul>
+            <li><em>OpenApi </em> <a href="/platform/q/swagger-ui/">Swagger UI</a> (always available)</li>
             <li>Your static assets are located in <code>src/main/resources/META-INF/resources</code>.</li>
             <li>Configure your application in <code>src/main/resources/application.yml</code>.</li>
-            <li>Quarkus now ships with a <a href="/q/dev/">Dev UI</a> (available in dev mode only)</li>
+            <li>Quarkus now ships with a <a href="/platform/q/dev/">Dev UI</a> (available in dev mode only)</li>
             <li>Play with the getting started example code located in <code>src/main/java</code>:</li>
         </ul>
                 <div class="example-code">
             <h3>YAML Config example</h3>
             <p>This Supersonic example displays mach speed in your favourite unit, depending on the specified Quarkus configuration.</p>
-            <p><code>@Path: <a href="/config/supersonic" class="path-link" target="_blank">/config/supersonic</a></code></p>
+            <p><code>@Path: <a href="/platform/config/supersonic" class="path-link" target="_blank">/platform/config/supersonic</a></code></p>
             <p><a href="https://quarkus.io/guides/config-reference#configuration-examples" class="guide-link" target="_blank">Related guide section...</a></p>
         </div>
         <div class="example-code">
             <h3>RESTEasy JAX-RS example</h3>
             <p>REST is easy peasy with this Hello World RESTEasy resource.</p>
-            <p><code>@Path: <a href="/hello-resteasy" class="path-link" target="_blank">/hello-resteasy</a></code></p>
+            <p><code>@Path: <a href="/platform/hello-resteasy" class="path-link" target="_blank">/platform/hello-resteasy</a></code></p>
             <p><a href="https://quarkus.io/guides/getting-started#the-jax-rs-resources" class="guide-link" target="_blank">Related guide section...</a></p>
         </div>
         <div class="example-code">
             <h3>RESTEasy JSON serialisation using Jackson</h3>
             <p>This example demonstrate RESTEasy JSON serialisation by letting you list, add and remove quark types from a list. Quarked!</p>
-            <p><code>@Path: <a href="/resteasy-jackson/quarks/" class="path-link" target="_blank">/resteasy-jackson/quarks/</a></code></p>
+            <p><code>@Path: <a href="/platform/resteasy-jackson/quarks/" class="path-link" target="_blank">/platform/resteasy-jackson/quarks/</a></code></p>
             <p><a href="https://quarkus.io/guides/rest-json#creating-your-first-json-rest-service" class="guide-link" target="_blank">Related guide section...</a></p>
         </div>
 
