登录出问题时，关闭socket

--- a/src/main/resources/META-INF/resources/socket.html
+++ b/src/main/resources/META-INF/resources/socket.html
@@ -100,7 +100,8 @@
               };
 
               socket.onclose = function (err) {
-
+                  $("#chat").append(err + "\n");
+                  scrollToBottom();
               }
           }
       };
