--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -1,190 +1,131 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <title>eulixplatform-registry-service - 1.0.0-SNAPSHOT</title>
-    <style>
-        h1, h2, h3, h4, h5, h6 {
-            margin-bottom: 0.5rem;
-            font-weight: 400;
-            line-height: 1.5;
-        }
+<meta charset="utf-8"> 
+<meta name="robots" content="noindex, nofollow">
+<link rel="stylesheet" href="./css/font-awesome.min.css">
+<style type="text/css">
+body
+{
+	margin:0;
+}
 
-        h1 {
-            font-size: 2.5rem;
-        }
 
-        h2 {
-            font-size: 2rem
-        }
+nav
+{
+	height:3.7vh;
+	padding-left:1.3vw;
+	padding-top:1vh;
+	padding-bottom:1vh;
+	box-shadow:2px 2px 5px #000;
 
-        h3 {
-            font-size: 1.75rem
+}
 
-        }
+#logo
+{
+	height:3.7vh;
+}
 
-        h4 {
-            font-size: 1.5rem
-        }
+.content
+{
+	padding-top:3.7px;
+}
 
-        h5 {
-            font-size: 1.25rem
-        }
+.left
+{
+	background-color:#F0F0F0;
+	height:93vh;
+	width:13vw;
+	display:inline-block;
 
-        h6 {
-            font-size: 1rem
-        }
+}
+.list
+{   
+	color:#666;
+	text-align:center;
 
-        .lead {
-            font-weight: 300;
-            font-size: 2rem;
-        }
+}
+.type
+{
+	padding-top:7vh;
+	cursor:pointer;
+	text-align:center;
+	padding-bottom:50px;
+	
 
-        .banner {
-            font-size: 2.7rem;
-            margin: 0;
-            padding: 2rem 1rem;
-            background-color: #0d1c2c;
-            color: white;
-        }
+}
 
-        body {
-            margin: 0;
-            font-family: -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-        }
+.type:hover
+{
 
-        code {
-            font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-            font-size: 87.5%;
-            color: #e83e8c;
-            word-break: break-word;
-        }
+background-color:#D3D3D3;
 
-        .left-column {
-            padding: .75rem;
-            max-width: 75%;
-            min-width: 55%;
-        }
+}
+.typec
+{
+	padding-top:7vh;
+	cursor:pointer;
+	text-align:center;
+	padding-bottom:50px;
+	color:#1C86EE;	
+}
+.typec:hover
+{
 
-        .right-column {
-            padding: .75rem;
-            max-width: 25%;
-        }
+background-color:#D3D3D3;
 
-        .container {
-            display: flex;
-            width: 100%;
-        }
+}
+.fa{
 
-        li {
-            margin: 0.75rem;
-        }
+padding-right:13px;
 
-        .right-section {
-            margin-left: 1rem;
-            padding-left: 0.5rem;
-        }
+}
 
-        .right-section h3 {
-            padding-top: 0;
-            font-weight: 200;
-        }
+.right
+{
+height:93vh;
+width:13vw;
+display:inline;  
+}
 
-        .right-section ul {
-            border-left: 0.3rem solid #71aeef;
-            list-style-type: none;
-            padding-left: 0;
-        }
 
-        .example-code {
-            border-left: 0.3rem solid #71aeef;
-            padding-left: 10px;
-        }
 
-        .example-code h3 {
-            font-weight: 200;
-        }
-    </style>
+
+
+</style>
+
+
 </head>
+
 <body>
 
-<div class="banner lead">
-    Your new Cloud-Native application is ready!
+<nav>
+<img id="logo" src="./img/logo.png"/>
+</nav>
+<div class="content">
+	<div class="left">
+		<div class="list">
+			<div class="typec" onclick="window.open('./index.html','_self')"><i class="fa fa-navicon fa-lg"></i> 首页</div>
+			<div class="type"  onclick="window.open('./file.html','_self')"><i class="fa fa-folder fa-lg"></i> 文件</div>
+			<div class="type"  onclick="window.open('./mailbox.html','_self')"><i class="fa fa-envelope fa-lg"></i> 信箱</div>
+			<div class="type"  onclick="window.open('./index.html','_self')"><i class="fa fa-trash fa-lg"></i> 回收站</div>
+		</div>
+		
+		
+		
+
+	</div>
+	
+	
+	<div class="right">
+
+	</div>
+
+
+
+
+
 </div>
 
-<div class="container">
-    <div class="left-column">
-        <p class="lead"> Congratulations, you have created a new Quarkus cloud application.</p>
 
-        <h2>What is this page?</h2>
-
-        <p>This page is served by Quarkus. The source is in
-            <code>src/main/resources/META-INF/resources/index.html</code>.</p>
-
-        <h2>What are your next steps?</h2>
-
-        <p>If not already done, run the application in <em>dev mode</em> using: <code>./mvnw compile quarkus:dev</code>.
-        </p>
-        <ul>
-            <li><em>OpenApi </em> <a href="/platform/q/swagger-ui/">Swagger UI</a> (always available)</li>
-            <li>Your static assets are located in <code>src/main/resources/META-INF/resources</code>.</li>
-            <li>Configure your application in <code>src/main/resources/application.yml</code>.</li>
-            <li>Quarkus now ships with a <a href="/platform/q/dev/">Dev UI</a> (available in dev mode only)</li>
-            <li>Play with the getting started example code located in <code>src/main/java</code>:</li>
-        </ul>
-                <div class="example-code">
-            <h3>YAML Config example</h3>
-            <p>This Supersonic example displays mach speed in your favourite unit, depending on the specified Quarkus configuration.</p>
-            <p><code>@Path: <a href="/platform/config/supersonic" class="path-link" target="_blank">/platform/config/supersonic</a></code></p>
-            <p><a href="https://quarkus.io/guides/config-reference#configuration-examples" class="guide-link" target="_blank">Related guide section...</a></p>
-        </div>
-        <div class="example-code">
-            <h3>RESTEasy JAX-RS example</h3>
-            <p>REST is easy peasy with this Hello World RESTEasy resource.</p>
-            <p><code>@Path: <a href="/platform/hello-resteasy" class="path-link" target="_blank">/platform/hello-resteasy</a></code></p>
-            <p><a href="https://quarkus.io/guides/getting-started#the-jax-rs-resources" class="guide-link" target="_blank">Related guide section...</a></p>
-        </div>
-        <div class="example-code">
-            <h3>RESTEasy JSON serialisation using Jackson</h3>
-            <p>This example demonstrate RESTEasy JSON serialisation by letting you list, add and remove quark types from a list. Quarked!</p>
-            <p><code>@Path: <a href="/platform/resteasy-jackson/quarks/" class="path-link" target="_blank">/platform/resteasy-jackson/quarks/</a></code></p>
-            <p><a href="https://quarkus.io/guides/rest-json#creating-your-first-json-rest-service" class="guide-link" target="_blank">Related guide section...</a></p>
-        </div>
-
-    </div>
-    <div class="right-column">
-        <div class="right-section">
-            <h3>Application</h3>
-            <ul>
-                <li>GroupId: <code>xyz.eulix.platform.services</code></li>
-                <li>ArtifactId: <code>eulixplatform-registry-service</code></li>
-                <li>Version: <code>1.0.0-SNAPSHOT</code></li>
-                <li>Quarkus Version: <code>1.13.7.Final</code></li>
-            </ul>
-        </div>
-        <div class="right-section">
-            <h3>Do you like Quarkus?</h3>
-            <ul>
-                <li>Go give it a star on <a href="https://github.com/quarkusio/quarkus">GitHub</a>.</li>
-            </ul>
-        </div>
-        <div class="right-section">
-            <h3>Selected extensions guides</h3>
-            <ul>
-                <li title="Use YAML to configure your Quarkus application"><a href="https://quarkus.io/guides/config-reference#yaml" target="_blank">YAML Configuration guide</a></li>
-                <li title="REST endpoint framework implementing JAX-RS and more"><a href="https://quarkus.io/guides/rest-json" target="_blank">RESTEasy JAX-RS guide</a></li>
-            </ul>
-        </div>
-        <div class="right-section">
-            <h3>More reading</h3>
-            <ul>
-                <li><a href="https://quarkus.io/guides/maven-tooling.html" target="_blank">Setup your IDE</a></li>
-                <li><a href="https://quarkus.io/guides/getting-started.html" target="_blank">Getting started</a></li>
-                <li><a href="https://quarkus.io/guides/" target="_blank">All guides</a></li>
-                <li><a href="https://quarkus.io" target="_blank">Quarkus Web Site</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
 </body>
-</html>
