Update platform/eulixplatform-services/src/main/resources/META-INF/resources/default.html, index.html, platform/eulixplatform-services/src/main/resources/META-INF/resources/img/logo.jpg, platform/eulixplatform-services/src/main/resources/META-INF/resources/img/bg.png, platform/eulixplatform-services/src/main/resources/META-INF/resources/img/denglu.png, platform/eulixplatform-services/src/main/resources/META-INF/resources/img/logo.png, platform/eulixplatform-services/src/main/resources/META-INF/resources/img/pic.png, platform/eulixplatform-services/src/main/resources/META-INF/resources/file.html, platform/eulixplatform-services/src/main/resources/META-INF/resources/mailbox.html, platform/eulixplatform-services/src/main/resources/META-INF/resources/recycle.html files

--- a/src/main/resources/META-INF/resources/default.html
+++ b/src/main/resources/META-INF/resources/default.html
@@ -100,7 +100,7 @@ display:inline;
 <body>
 
 <nav>
-<img id="logo" src="./img/logo.png"/>
+<img id="logo" src="./img/logo.jpg"/>
 </nav>
 <div class="content">
 	<div class="left">
