--- a/src/main/resources/META-INF/resources/file.html
+++ b/src/main/resources/META-INF/resources/file.html
@@ -100,7 +100,7 @@ display:inline;
 <body>
 
 <nav>
-<img id="logo" src="./img/logo.png"/>
+<img id="logo" src="./img/logo.jpg"/>
 </nav>
 <div class="content">
 	<div class="left">
