--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -162,7 +162,7 @@ $(function(){
 		console.log(result);
 		console.log(result.boxDomain);
 		if(result.bkey!=null)
-			window.location.href="https://"+result.boxDomain+"/space/dist/#/login?bkey="+result.bkey+"&publickey="+encodeURIComponent(result.boxPubKey)+"&"+Math.random();
+			window.location.href="https://"+result.boxDomain+"/space/index.html?bkey="+result.bkey+"&publickey="+encodeURIComponent(result.boxPubKey);
 			}
 	});
 	
